fdo#73215 filter: don't try to handle pictureFrame in GetOOXMLPresetGeometry()

"pictureFrame" is not a valid drawingML shape type, VML export used to
write just "rect", by removing an explicit entry for
ESCHER_ShpInst_PictureFrame we now do the same.

Change-Id: I57683b7f5f80bfef8c3b6fb9ae9f33e4599a7eb2